<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfficialActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:onClick="twitterClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website" />

            <TextView
                android:id="@+id/party"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/office"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office" />

            <TextView
                android:id="@+id/location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#3B206A"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/portrait"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/missing" />

            <ImageView
                android:id="@+id/partyImg"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:onClick="partySite"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="@+id/portrait"
                app:layout_constraintEnd_toEndOf="@+id/portrait"
                app:layout_constraintStart_toStartOf="@+id/portrait"
                app:layout_constraintTop_toTopOf="@+id/portrait"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/addr"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/address"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portrait" />

            <TextView
                android:id="@+id/address"
                android:layout_width="230dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/none"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portrait" />

            <TextView
                android:id="@+id/phn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/addr"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/none"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/address"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/eml"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/phn"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/none"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/phone"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/web"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/website"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/eml"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/none"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:onClick="facebookClicked"
                app:layout_constraintEnd_toStartOf="@+id/twitter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/website" />

            <ImageView
                android:id="@+id/youtube"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:onClick="youTubeClicked"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/twitter"
                app:layout_constraintTop_toBottomOf="@+id/website" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>